crates/rattler_build_diffy/src/patch/snapshots/rattler_build_diffy__patch__parse__tests__real_world_patches@0001-x86-maxrss-CMakeLists.txt.patch.snap
---
source: crates/rattler_build_diffy/src/patch/parse.rs
expression: patches
input_file: crates/rattler_build_diffy/src/patch/test-data/0001-x86-maxrss-CMakeLists.txt.patch
---
Ok(
    [
        Patch {
            original: Some(
                Filename(
                    "CMakeLists.txt.old",
                ),
            ),
            modified: Some(
                Filename(
                    "CMakeLists.txt",
                ),
            ),
            hunks: [
                Hunk {
                    old_range: HunkRange {
                        start: 933,
                        len: 2,
                    },
                    new_range: HunkRange {
                        start: 936,
                        len: 3,
                    },
                    function_context: None,
                    lines: [
                        Context(
                            "  -Dno-langref\n",
                        ),
                        Insert(
                            "  --maxrss 7000000000\n",
                        ),
                        Context(
                            ")\n",
                        ),
                    ],
                },
            ],
        },
        Patch {
            original: Some(
                Filename(
                    "build.zig.old",
                ),
            ),
            modified: Some(
                Filename(
                    "build.zig",
                ),
            ),
            hunks: [
                Hunk {
                    old_range: HunkRange {
                        start: 713,
                        len: 3,
                    },
                    new_range: HunkRange {
                        start: 713,
                        len: 3,
                    },
                    function_context: None,
                    lines: [
                        Context(
                            "        .name = \"zig\",\n",
                        ),
                        Delete(
                            "        .max_rss = 7_800_000_000,\n",
                        ),
                        Insert(
                            "        .max_rss = 7_000_000_000,\n",
                        ),
                        Context(
                            "        .root_module = compiler_mod,\n",
                        ),
                    ],
                },
            ],
        },
    ],
)
